--- a/latex/main.tex
+++ b/latex/main.tex
@@ -421,19 +421,6 @@ Den relevante R-kode som bliver brugt til analysen, er vist i listing \ref{lst:f
 Som det ses af listing \ref{lst:fitt}, udregner vi først $ID$ for vores data, baseret på de foruddefinerede værdier af $A$ og $W$. Herefter bruger vi $lm()$ til at fitte modellen til vores data, hvorefter vi plotter dataen og modellen i et residualplot.\\
 I listing \ref{lst:aic} ses det at vi benytter $AIC()$ på alle fire modeller, hvorefter de bliver sorteret efter størrelse for nemmere sammenligning.
 
-\addcontentsline{toc}{subsection}{Residualanalyse}
-\subsection*{Residualanalyse}
-\begin{minipage}{\textwidth}
-	\centering
-	\includegraphics[width=\textwidth]{images/plots/plot_residual_comparison}
-	\captionof{figure}{Sammenligning af residualplots}
-	\label{fig:plot_residual_comparison}
-\end{minipage}\\\\
-For at vurdere præcisionen af modellerne, har vi valgt at lave en residualanalyse ved hjælp af residualplots (figur \ref{fig:plot_residual_comparison}). Residualerne I modellerne er variationen i tid ($MT$) som modellerne ikke når at opfange, og de kan derved sige noget om hvor præcis modellerne er i forhold til den data vi har indsamlet.\\
-På figur \ref{fig:plot_residual_comparison} ses alle fire modellers residualplot, med en rød linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen.\\
-Vi kan derfor hurtigt se på Welford's residualplot at denne model passer dårligt på vores data, hvorom Fitt's, MacKenzie's og Meyer's ligger sig tættere op ad den data vi har indsamlet - det ses ved nærmere studering at smoothing-funktionen's linje at Meyer's model giver os det bedste fit til vores data.
-
-
 \addcontentsline{toc}{subsection}{AIC-analyse}
 \subsection*{AIC-analyse}
 \begin{minipage}{\textwidth}
@@ -442,7 +429,19 @@ Vi kan derfor hurtigt se på Welford's residualplot at denne model passer dårli
 	\captionof{figure}{AIC-analyse}
 	\label{fig:plot_analysis_aic}
 \end{minipage}\\\\
-Bla bla bla.. tekst om residualanalyse
+Udfra AIC-analysen har vi mulighed for at vurdere præcisionen af de fire modeller. Det ses af figur \ref{fig:plot_analysis_aic} at AIC-tallet Meyer-modellen er lavest, men både MacKenzies og Fitts ligger kort efter. Til gengæld ligger Welford-modellen langt højere end de tre andre. I følge AIC-analysen er Meyer-modellen altså den bedste, mens Welford-modellen er den klart dårligste. MacKenzie- og Fitt-modellerne ligger tæt på hinanden og ligger også tæt på Meyers.
+
+\addcontentsline{toc}{subsection}{Residualanalyse}
+\subsection*{Residualanalyse}
+\begin{minipage}{\textwidth}
+	\centering
+	\includegraphics[width=\textwidth]{images/plots/plot_residual_comparison}
+	\captionof{figure}{Sammenligning af residualplots}
+	\label{fig:plot_residual_comparison}
+\end{minipage}\\\\
+For at få en ekstra vurdering af præcisionen af modellerne, har vi valgt at lave en residualanalyse ved hjælp af residualplots (figur \ref{fig:plot_residual_comparison}). Residualerne I modellerne er variationen i tid ($MT$) som modellerne ikke når at opfange, og de kan derved sige noget om hvor præcis modellerne er i forhold til den data vi har indsamlet.\\
+På figur \ref{fig:plot_residual_comparison} ses alle fire modellers residualplot, med en rød linje defineret af en smoothing-funktion. Smoothing-funktionen er tilføjet som et visuelt hjælpemiddel der tydeligt kan vise hvordan residualerne fordeler sig omkring x-aksen. Jo mere centreret de er om aksen, og jo mere linære de er i forhold til aksen, jo bedre er modellen.\\
+Når vi kigger på de fire residualplot, så viser de samme resultater som AIC-analysen. Welford's residualplot viser at modellen passer dårlig på den indsamlede data. Fitt's og MacKenzie's ligner hinanden meget, mens Meyer's er den model der giver den bedste fit til den indsamlede data.
 
 %\addcontentsline{toc}{chapter}{Konklusion}
 %\chapter*{Konklusion}
