updated forsoegsopstilling with explanations

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -219,8 +219,9 @@ I dette afsnit beskriver vi det design der er brugt i vores forsøg. Derudover v
 
 \addcontentsline{toc}{section}{Forsøgsopstilling}
 \section*{Forsøgsopstilling}
-Vi har valgt at udføre to brugerundersøgelser, for at undersøge deltagernes bevægelsesbaner. Det første vil være et kontrolleret 'laboratorieeksperiment', mens det andet er et ukontrolleret crowdsourcing og webbaseret eksperiment.\\\\
-Større dele af vores eksperiment har vi valgt at udføre ligesom tidligere udførte forsøg, da de er udført at folk med meget mere erfaring, og ekspertise på dette område, end os.
+Vi har valgt at udføre to brugerundersøgelser, for at have både et kontrolleret og et ukontrolleret datasæt med deltagernes bevægelsesbaner.
+Det første vil være et kontrolleret laboratorieeksperiment hvor vi kontrollerer flest mulige variable, mens det andet er et ukontrolleret crowdsourcing- og webbaseret eksperiment hvor vi får en større mængde data, men ikke har den samme kontrol over eksperimentets variable.\\\\
+Større dele af vores eksperiment har vi valgt at udføre ligesom tidligere udførte forsøg, da de er udført at folk med meget mere erfaring, og ekspertise på dette område end os.
 Det drejer sig om følgende dele af vores eksperiment:
 \begin{itemize}
 \item Spørgsmål som blev stillet før crowdsourcing-deltagerne kunne udføre forsøget\cite{goldberg2015}
