--- a/latex/main.tex
+++ b/latex/main.tex
@@ -109,7 +109,7 @@ Siden udgivelsen af Fitts’ artikel, har flere forskere forsøgt at finde en fo
 I \cite{welford1968} beskriver Welford en række fundamentale forudsætninger for det menneskelige motoriske system. Her kiggede han blandt andet på Fitts' lov og de data han indsamlede i sit første forsøg. Han mente at Fitts' lov i princippet gengav den indsamlede data præcist, men han så også tre utilfredsstillende egenskaber, hvilket fik ham til at foreslå følgende modifikationer.
 \begin{figure}[h]
 \centering
-\includegraphics{images/illustrations/welford_plot_1}
+\includegraphics[width=.5\textwidth]{images/illustrations/welford_plot_1}
 \caption{Grafen som Welford bruger som grundlag for sine modifikationer.}
 \label{fig:WelfordGraf}
 \end{figure}
@@ -131,7 +131,7 @@ Den sidste observation, der blev gjort, var at kurven i figur~\ref{fig:WelfordGr
 Ud fra de tre ovenstående modifikationer indførte Welford igen Fitts' data fra hans første forsøg i et koordinatsystem. Denne gang havde dataen dog været igennem fejl reduktion og blev indsat op imod Welford's formulering, hvilket viste at Ligning \ref{eq:WelfordsLov} var bedre til at beskrive dataen end Ligning \ref{eq:FittsLov}. Den affine kurve som Welford kom frem til er at se i figur \ref{fig:WelfordGraf2}
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.3]{images/illustrations/welford_plot_2}
+\includegraphics[width=.5\textwidth]{images/illustrations/welford_plot_2}
 \caption{Fitts' data og den affine kurve for Welfords model.}
 \label{fig:WelfordGraf2}
 \end{figure}
