Tilføjet rigtige graf og lavet mere sammenligning

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -185,5 +185,6 @@
 @article{goldberg2015,
   title={Two Large Open-Access Datasets for Fitts’ Law of Human Motion and a Succinct Derivation of the Square-Root Variant},
   author={Goldberg, Ken and Faridani, Siamak and Alterovitz, Ron},
-  publisher={IEEE}
+  publisher={IEEE},
+  year={2015}
 }
