--- a/latex/main.tex
+++ b/latex/main.tex
@@ -243,7 +243,7 @@ Vi har valgt at bruge JavaScript til at udvikle vores forsøg, da vi alle er bek
 
 \addcontentsline{toc}{section}{Opgavetyper}
 \section*{Opgavetyper}
-I denne sektion vil vi beskrive hvordan tunnel-, spiral- og pegeopgaven er designet.
+I denne sektion vil vi beskrive hvordan tunnel-, spiral- og pegeopgaverne er designet.
 
 \addcontentsline{toc}{subsection}{Tunnelopgave}
 \subsection*{Tunnelopgave}
@@ -290,10 +290,48 @@ Når testpersonen passerer den højre side af tunnellen vil opgaven stoppe, og d
 
 \addcontentsline{toc}{subsection}{Spiralopgave}
 \subsection*{Spiralopgave}
-I denne opgave skal testdeltageren føre markøren gennem fire spiraler af varierende vindinger. Et eksempel på en sådan spiral kan ses i Figur \ref{fig:spiralopgave}. Spiralernes vindinger varierer med ($A = 1, 2, 3, 4$). Bredden er på de tre første spiraler ens, mens den sidste spiral kun har halv bredde af de tre forrige.
+\begin{minipage}{\textwidth}
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=\textwidth, trim = 5cm 14cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_path}
+		\captionof{figure}{Eksperiment - Spiral 1}
+		\label{fig:ex_spiral_1}
+	\end{minipage}
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=\textwidth, trim = 5cm 14cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_2}
+		\captionof{figure}{Eksperiment - Spiral 2}
+		\label{fig:ex_spiral_2}
+	\end{minipage}
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=\textwidth, trim = 5cm 14cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_3}
+		\captionof{figure}{Eksperiment - Spiral 3}
+		\label{fig:ex_spiral_3}
+	\end{minipage}
+	\begin{minipage}{.5\textwidth}
+		\centering
+		\includegraphics[width=\textwidth, trim = 5cm 14cm 5cm 8cm, clip]{images/screenshots/ex_step_5_spiral_4}
+		\captionof{figure}{Eksperiment - Spiral 4}
+		\label{fig:ex_spiral_4}
+	\end{minipage}
+\end{minipage}\\\\
+I denne opgave skal testdeltageren føre deres markør igennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}. Antallet af vindinger i spiralerne er vist i figur \ref{tab:spiralopgave}. Antallet af vindingerne på spiralerne er taget fra \cite{accot1997}.
+\begin{center}
+	\begin{tabular}{c c}
+		Spiral & A \\
+		\hline
+		1 & 1 \\
+		2 & 2 \\
+		3 & 3 \\
+		4 & 4 \\
+	\end{tabular}
+	\captionof{table}{Antal vindinger på spiraler}\label{tab:spiralopgave}
+\end{center}
 
-Ved begyndelsen af en opgave er spiralens udmunding markeret som en grøn streg. Når deltageren passerer denne linje, vil linjen blive stort. På samme tid vil den inderste linje i spiralen blive grøn. En grøn streg vil blive tegnet, hvor deltageren bevæger sin pegeenhed. Først når deltageren passerer den inderste linje vil opgaven slutte, indikeret ved at spiralen fjernes. Næste opgave blev først startet når deltageren klikker på knappen 'continue', som kun er tilgængelig når én opgave er slut. I tilfælde af at testdeltageren rammer eller ryger uden for kanterne vil de kunne fortsætte ubemærket. Hele bevægelsesbanen og tiden det tager at gennemføre hver tunnel vil blive gemt.
-I denne opgave vil testdeltageren skulle føre markøren igennem fire spiraler af varierende størrelser og brede. Et eksempel på én af spiralerne kan ses i figur \ref{fig:spiralopgave}. Spiralerne kom i fire størrelser Hver test starter når testdeltageren fører musen forbi den grønne linje i spiralens indmunding
+
+%Ved begyndelsen af en opgave er spiralens udmunding markeret som en grøn streg. Når deltageren passerer denne linje, vil linjen blive stort. På samme tid vil den inderste linje i spiralen blive grøn. En grøn streg vil blive tegnet, hvor deltageren bevæger sin pegeenhed. Først når deltageren passerer den inderste linje vil opgaven slutte, indikeret ved at spiralen fjernes. Næste opgave blev først startet når deltageren klikker på knappen 'continue', som kun er tilgængelig når én opgave er slut. I tilfælde af at testdeltageren rammer eller ryger uden for kanterne vil de kunne fortsætte ubemærket. Hele bevægelsesbanen og tiden det tager at gennemføre hver tunnel vil blive gemt.
+%I denne opgave vil testdeltageren skulle føre markøren igennem fire spiraler af varierende størrelser og brede. Et eksempel på én af spiralerne kan ses i figur \ref{fig:spiralopgave}. Spiralerne kom i fire størrelser Hver test starter når testdeltageren fører musen forbi den grønne linje i spiralens indmunding
 
 \addcontentsline{toc}{subsection}{Pegeopgave}
 \subsection*{Pegeopgave}
