--- a/latex/main.tex
+++ b/latex/main.tex
@@ -215,9 +215,25 @@ Når vi kigger på de fire formuleringer, så kan vi vise at de ikke er ens, ved
 0.2 + 0.16\cdot\log\left(\frac{5 + 1}{1}\right) = 0.4866\\
 0.2 + 0.16\cdot\sqrt{\frac{5}{1}} = 0.5577
 \end{align*}
+Da de fire ovenstående udregninger giver forskellige resultater, er de fire formuleringer ikke ens og vi vil derfor få forskellige resultater når vi bruger dem på den indsamlede data.
+
+På trods af at de fire formuleringer er forskellige, så vil de godt kunne approksimere hinanden. Vi har derfor plottet de fire formulering i to interval, for at se om de approksimere hinanden.
 
 
-
+\subsection*{Meyers formel}
+\begin{figure}[h]
+\centering
+\includegraphics[scale=1.0]{images/illustrations/base_model_meyer}
+\caption{Stochastic optimized-submovement modellen - Den horisontale akse repræsentere afstand og den vertikale akse bevægelseshastighed. De faste linjer repræsentere primære underbevægelser, mens stiplede linjer er korrigerende underbevægelser. Bevægelserne tager udgangspunkt i en startende position (afstand = 0) og skal bevæge sig til et mål, med center i D og bredde W.}
+\label{fig:MeyerTheory}
+\end{figure}
+\subsection*{Meyers formel}
+\begin{figure}[h]
+\centering
+\includegraphics[scale=1.0]{images/illustrations/base_model_meyer}
+\caption{Stochastic optimized-submovement modellen - Den horisontale akse repræsentere afstand og den vertikale akse bevægelseshastighed. De faste linjer repræsentere primære underbevægelser, mens stiplede linjer er korrigerende underbevægelser. Bevægelserne tager udgangspunkt i en startende position (afstand = 0) og skal bevæge sig til et mål, med center i D og bredde W.}
+\label{fig:MeyerTheory}
+\end{figure}
 
 
 
